--- a/p1/Server/Vagrantfile
+++ b/p1/Server/Vagrantfile
@@ -12,7 +12,8 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "base"
+  # ! Use the latest stable version of Ubuntu for the box
+  config.vm.box = "bento/ubuntu-22.04"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -32,7 +33,8 @@ Vagrant.configure("2") do |config|
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
-  # config.vm.network "private_network", ip: "192.168.33.10"
+  # ! Assing a dedicated IP to the eth1 interface
+  config.vm.network "private_network", ip: "192.168.56.110"
 
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
@@ -55,14 +57,18 @@ Vagrant.configure("2") do |config|
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
   # Example for VirtualBox:
-  #
-  # config.vm.provider "virtualbox" do |vb|
-  #   # Display the VirtualBox GUI when booting the machine
-  #   vb.gui = true
-  #
-  #   # Customize the amount of memory on the VM:
-  #   vb.memory = "1024"
-  # end
+  # ! Provision VMware with 1 CPU and 512MB of memory
+  config.vm.provider "vmware_fusion" do |vb|
+  # * Set the name of the VM
+    config.vm.hostname = "ioromeroS"
+  # * Display the VMWare GUI when booting the machine
+    v.vmx["gui"] = "true"
+  # * Customize the amount of CPUs on the VM:
+    v.vmx["numvcpus"] = "1"
+  # * Customize the amount of memory on the VM:
+    v.vmx["memsize"] = "512"
+  end
+
   #
   # View the documentation for the provider you are using for more
   # information on available options.
@@ -70,8 +76,13 @@ Vagrant.configure("2") do |config|
   # Enable provisioning with a shell script. Additional provisioners such as
   # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
   # documentation for more information about their specific syntax and use.
-  # config.vm.provision "shell", inline: <<-SHELL
-  #   apt-get update
-  #   apt-get install -y apache2
-  # SHELL
+  config.vm.provision "shell", inline: <<-SHELL
+    # * Download and install K3s
+    curl -sfL https://get.k3s.io | sh -s - --write-kubeconfig-mode 644
+
+    # * Download and install kubectl
+    curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+    chmod +x kubectl
+    sudo mv kubectl /usr/local/bin/
+  SHELL
 end
