--- a/p1/Server/Vagrantfile
+++ b/p1/Server/Vagrantfile
@@ -13,7 +13,7 @@ Vagrant.configure("2") do |config|
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
   # ! Use the latest stable version of Ubuntu for the box
-  config.vm.box = "bento/ubuntu-22.04"
+  config.vm.box = "koalephant/debian12"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -58,11 +58,11 @@ Vagrant.configure("2") do |config|
   # backing providers for Vagrant. These expose provider-specific options.
   # Example for VirtualBox:
   # ! Provision VMware with 1 CPU and 512MB of memory
-  config.vm.provider "vmware_fusion" do |vb|
+  config.vm.provider "vmware_fusion" do |v|
   # * Set the name of the VM
     config.vm.hostname = "ioromeroS"
   # * Display the VMWare GUI when booting the machine
-    v.vmx["gui"] = "true"
+    #v.gui = "true"
   # * Customize the amount of CPUs on the VM:
     v.vmx["numvcpus"] = "1"
   # * Customize the amount of memory on the VM:
