--- a/p1/Server/Vagrantfile
+++ b/p1/Server/Vagrantfile
@@ -84,5 +84,9 @@ Vagrant.configure("2") do |config|
     curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/arm64/kubectl"
     chmod +x kubectl
     sudo mv kubectl /usr/local/bin/
+
+    # * Set KUBECONFIG environment variable
+    echo "export KUBECONFIG=/etc/rancher/k3s/k3s.yaml" | sudo tee -a /etc/profile
+    . ~/.bashrc
   SHELL
 end
