--- a/p2/Vagrantfile
+++ b/p2/Vagrantfile
@@ -70,13 +70,23 @@ Vagrant.configure("2") do |config|
   end
 
   # * Copy deployment, service, and ingress files to the guest machine
-  config.vm.provision "file", source: "deployments/app1-deployment.yaml", destination: "/home/vagrant/app1-deployment.yaml"
-  config.vm.provision "file", source: "deployments/app2-deployment.yaml", destination: "/home/vagrant/app2-deployment.yaml"
-  config.vm.provision "file", source: "deployments/app3-deployment.yaml", destination: "/home/vagrant/app3-deployment.yaml"
-  config.vm.provision "file", source: "services/app1-service.yaml", destination: "/home/vagrant/app1-service.yaml"
-  config.vm.provision "file", source: "services/app2-service.yaml", destination: "/home/vagrant/app2-service.yaml"
-  config.vm.provision "file", source: "services/app3-service.yaml", destination: "/home/vagrant/app3-service.yaml"
-  config.vm.provision "file", source: "ingress/ingress.yaml", destination: "/home/vagrant/ingress.yaml"
+  config.vm.provision "shell", inline: <<-SHELL
+  mkdir -p /home/vagrant/app1
+  mkdir -p /home/vagrant/app2
+  mkdir -p /home/vagrant/app3
+  SHELL
+
+  config.vm.provision "file", source: "app1/deployment.yaml", destination: "/home/vagrant/app1/deployment.yaml"
+  config.vm.provision "file", source: "app1/service.yaml", destination: "/home/vagrant/app1/service.yaml"
+  config.vm.provision "file", source: "app1/ingress.yaml", destination: "/home/vagrant/app1/ingress.yaml"
+  
+  config.vm.provision "file", source: "app2/deployment.yaml", destination: "/home/vagrant/app2/deployment.yaml"
+  config.vm.provision "file", source: "app2/service.yaml", destination: "/home/vagrant/app2/service.yaml"
+  config.vm.provision "file", source: "app2/ingress.yaml", destination: "/home/vagrant/app2/ingress.yaml"
+  
+  config.vm.provision "file", source: "app3/deployment.yaml", destination: "/home/vagrant/app3/deployment.yaml"
+  config.vm.provision "file", source: "app3/service.yaml", destination: "/home/vagrant/app3/service.yaml"
+  config.vm.provision "file", source: "app3/ingress.yaml", destination: "/home/vagrant/app3/ingress.yaml"
 
   #
   # View the documentation for the provider you are using for more
