--- a/p2/app2/deployment.yaml
+++ b/p2/app2/deployment.yaml
@@ -21,6 +21,9 @@ spec:
         ports:
         - containerPort: 80
         resources:
+          requests:
+            cpu: "50m"
+            memory: "50Mi"
           limits:
-            cpu: "1"
-            memory: "500Mi"
+            cpu: "100m"
+            memory: "100Mi"
