--- a/p1/ServerWorker/Vagrantfile
+++ b/p1/ServerWorker/Vagrantfile
@@ -12,7 +12,7 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
-  # ! Use the latest stable version of Ubuntu for the box
+  # ! Use the latest stable version of debian for the box
   config.vm.box = "koalephant/debian12"
 
   # Disable automatic box update checking. If you disable this, then
